# coffe_machine

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakePresets.json  README.md  STM32H750XBHX_FLASH.ld  coffee_machine.ioc  coffee_machine.sln  coffee_machine.vgdbcmake
Assets/: assets_manifest.json
Assets/Inc/: assets.h
Assets/Src/: assets.cpp
Core/Inc/: app_config.h  coffee_machine_simulation.hpp  countdown_formatter.hpp  i2c.h  main.h  mt48lc4m32b2_conf.h  quadspi.h  stm32h750b_discovery_conf.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Core/Src/: coffee_machine_simulation.cpp  countdown_formatter.cpp  dma2d.c  fmc.c  gpio.c  i2c.c  ltdc.c  main.c  main.cpp  quadspi.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  system_stm32h7xx.c  usart.c
Drivers/BSP/Components/ft5336/: ft5336_conf.h
Drivers/BSP/Components/mt48lc4m32b2/: mt48lc4m32b2.c
Drivers/BSP/STM32H750B-DK/: stm32h750b_discovery_bus.c
ExtMem_Boot/Inc/: stm32h7xx_hal_conf.h
ExtMem_Boot/Src/: main.c
ExtMem_Boot/gcc/: STM32H750XBHx_FLASH.ld
TouchGFX/: ApplicationTemplate.touchgfx.part  coffee_machine.touchgfx  target.config
TouchGFX/App/: app_touchgfx.c  app_touchgfx.h
TouchGFX/assets/texts/: texts.xml
TouchGFX/gui/include/gui/brewing_screen_screen/: IBrewing_View.hpp  brewing_screenPresenter.hpp  brewing_screenView.hpp
TouchGFX/gui/include/gui/common/: FrontendApplication.hpp
TouchGFX/gui/include/gui/model/: Model.hpp  ModelInterfaces.hpp  ModelListener.hpp
TouchGFX/gui/include/gui/slection_screen_screen/: ISelection_View.hpp  slection_screenPresenter.hpp  slection_screenView.hpp
TouchGFX/gui/include/gui/spash_screen_screen/: spash_screenPresenter.hpp  spash_screenView.hpp
TouchGFX/gui/include/gui/splash_screen_screen/: ISplash_View.hpp  splash_screenPresenter.hpp  splash_screenView.hpp
TouchGFX/gui/src/brewing_screen_screen/: brewing_screenPresenter.cpp  brewing_screenView.cpp
TouchGFX/gui/src/common/: FrontendApplication.cpp
TouchGFX/gui/src/model/: Model.cpp
TouchGFX/gui/src/slection_screen_screen/: slection_screenPresenter.cpp  slection_screenView.cpp
TouchGFX/gui/src/spash_screen_screen/: spash_screenPresenter.cpp  spash_screenView.cpp
TouchGFX/gui/src/splash_screen_screen/: splash_screenPresenter.cpp  splash_screenView.cpp
USB_DEVICE/App/: usbd_cdc_if.c
coffee_machine/: app_test_api.cpp  app_test_api.hpp  app_test_channel.cpp  app_test_channel.h  app_test_uart.cpp  app_test_uart.hpp  coffee_machine_app.cpp  coffee_machine_app.hpp  coffee_machine_board.cpp  coffee_machine_board.hpp  coffee_machine_simulation.cpp  coffee_machine_simulation.hpp  countdown_formatter.cpp  countdown_formatter.hpp
docs/01-architecture/: README.md
docs/02-build-and-flash/: README.md
docs/03-debugging/: README.md
docs/04-drivers/: README.md  fmc-sdram.md  ltdc-display.md  qspi-xip.md  touch-input.md  uart-debug.md  usb-cdc-com.md
docs/05-artifacts/: README.md
docs/06-touchgfx/: README.md
docs/07-testing/: README.md
docs/08-system-testing/: README.md
docs/08-tester-guide/: README.md
docs/08-unit-testing/: README.md
docs/09-system-testing/: README.md
requirements/: big_picture.pptx  brewing_screen and_software_design_recommendation.md  coding_guidelines.md  coffee_steam_recommendation.md  gui_requirements.md  steam_picture_reworking_in_gimp.md  steam_prompt_vorlage.md  tougfx_designer_work.md
requirements/visualgdb/: README.md  coffee_machine.app_direct_debug.vgdbcmake  use_app_direct_debug.ps1  use_bootloader_debug.ps1
tests/: CMakeLists.txt  CMakePresets.json
tests/unit/: brewing_screen_presenter_tests.cpp  coffee_machine_app_tests.cpp  coffee_machine_simulation_tests.cpp  countdown_formatter_tests.cpp  model_tests.cpp  slection_screen_presenter_tests.cpp  splash_screen_presenter_tests.cpp
tests_python/: README.md  conftest.py  environment.yml  pytest.ini  requirements.txt  run_pytest.py
tests_python/harness/: board_uart.py  protocol.py
tests_python/tests/: test_brewing_flow.py  test_drinks.py  test_selection_matrix.py  test_smoke.py  test_startup.py
tools/visualgdb/: README.md  coffee_machine.boot_to_app_debug.vgdbcmake  coffee_machine.bootloader_debug.vgdbcmake  use_boot_to_app_debug.ps1
